deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pipeline-demo
    namespace: pipelines-tutorial
spec:
    selector:
        matchLabels:
            app: pipeline-demo
    replicas: 1
    template:
        metadata:
            labels:
                app: pipeline-demo
        spec:
            containers:
                - name: pipeline-demo
                  image: mage-registry.openshift-image-registry.svc:5000/pipelines-tutorial/pipeline-demo
                  ports:
                      - containerPort: 8080
