deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-demo
  namespace: pipelines-tutorial
spec:
  selector:
    app: pipeline-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
